Revert "fix propper color for collapse menu symbol in light mode"
This reverts commit 5371c0938085af20fe3b70635fe9755f4dd68c6b.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -181,8 +181,4 @@ input {
   .rooms-inner-content{
     background-color: black !important;
   }
-
-  .burger-color{
-    background-color: #212529 !important;
-  }
 }
